--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+CHANGES IN VERSION 1.0.2
+------------------------
+ o Remove GNU Make syntax [2015-03-21 Sat]
+
 CHANGES IN VERSION 1.0.1
 ------------------------
  o Update README with uptodate installation instructions
